--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Tatto And Piercing - Agenda, Noticias, Lugares</title>
+    <title>Tatto And Piercing - Agenda, Noticias, Lugares(CAMBIO prueba)</title>
     <meta name="Description" content="Pagina de dedicada a encontrar estudios de Tatuajes y Piercing con los 
     artistas de tu preferencia asi como visualizar su estilo de trabajo">
     
